--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -21,7 +21,7 @@
   <main>
     <div class="quiz-card">
       <p>Let's start to track your progress</p>
-      <form action="/signup" method="POST">
+      <form action="/signup" method="POST" autocomplete="off">
         <input type="text" name="username" 
         placeholder="Enter your username" 
         pattern="[^ ]+" 
