--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,7 +21,7 @@
   <main>
     <div class="quiz-card">
       <p>Welcome Back!</p>
-      <form action="/login" method="POST">
+      <form action="/login" method="POST" autocomplete="off">
         <input type="text" name="username" 
         placeholder="Enter your username" 
         pattern="[^ ]+" 
